--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "basiclightbox": "^5.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
